apps/base/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  type: LoadBalancer
  selector:
    app: qbittorrent
  ports:
    - port: 8080
      targetPort: 8080
      name: http
    - port: 6881
      targetPort: 6881
      name: bittorrent-tcp
    - port: 6881
      targetPort: 6881
      protocol: UDP
      name: bittorrent-udp
